All pages are complete and responsive.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </li>
                     <li><a class="tt_menu_link" href="#">About</a></li>
                     <li><a class="tt_menu_link" href="#">Trends</a></li>
-                    <li><a class="tt_menu_link" href="#">Contact</a></li>
+                    <li><a class="tt_menu_link anchor" href="#contactFormArea">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -380,7 +380,7 @@
         </div>
     </div> <!-- Recent Trends Area END -->
 
-    <div class="customer_feedback_area">
+    <div id="testimonialsArea" class="customer_feedback_area">
         <div class="container">
             <div class="row">
                 <div class="testimonial_box">
@@ -494,7 +494,7 @@
         </div>
     </div> <!-- Customer Feedback Area END -->
 
-    <div class="why_techtripp_area">
+    <div id="advnatagesArea" class="why_techtripp_area">
         <div class="container">
             <div class="row">
                 <div class="title_holder text-center center-block">
@@ -591,7 +591,7 @@
         </div>
     </div> <!-- Why TechTripp Area END -->
 
-    <div class="contact_area">
+    <div id="contactFormArea" class="contact_area">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 contact_details_holder">
@@ -637,7 +637,7 @@
         </div>
     </div> <!-- Contact Area END -->
 
-    <div class="newsletter_area">
+    <div id="newsletterArea" class="newsletter_area">
         <div class="container">
             <div class="row">
                 <div class="newsletter_input_holder">
@@ -674,7 +674,7 @@
                             <li><a href="#">What We Do</a></li>
                             <li><a href="#">Our Philosophy</a></li>
                             <li><a href="#">Tech Expertise</a></li>
-                            <li><a href="#">Advantages</a></li>
+                            <li><a class="anchor" href="#advnatagesArea">Advantages</a></li>
                         </ul>
                     </div>
 
@@ -692,9 +692,9 @@
                     <div class="col-sm-2 col-xs-offset-1 col-xs-5 f_links_holder">
                         <h6 class="f_links_title">Misc</h6>
                         <ul class="f_links">
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Newsletter</a></li>
-                            <li><a href="#">Testimonials</a></li>
+                            <li><a class="anchor" href="#contactFormArea">Contact</a></li>
+                            <li><a class="anchor" href="#newsletterArea">Newsletter</a></li>
+                            <li><a class="anchor" href="#testimonialsArea">Testimonials</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
