--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
                     </li>
                     <li><a class="tt_menu_link" href="#">About</a></li>
                     <li><a class="tt_menu_link" href="#">Trends</a></li>
-                    <li><a class="tt_menu_link" href="#">Contact</a></li>
+                    <li><a href="#contactForm" class="tt_menu_link" href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
