--- a/index.html
+++ b/index.html
@@ -495,8 +495,9 @@
     </div> <!-- Customer Feedback Area END -->
 
     <div id="advnatagesArea" class="why_techtripp_area">
-        <div class="container">
-            <div class="row">
+        <div class="why_techtripp_area_inner">
+            <div class="container">
+                <div class="row">
                 <div class="title_holder text-center center-block">
                     <h2 class="section_title">Why <span>TechTripp</span></h2>
                 </div>
@@ -589,6 +590,7 @@
                 <div class="network_abstract"></div>
             </div>
         </div>
+        </div>
     </div> <!-- Why TechTripp Area END -->
 
     <div id="contactFormArea" class="contact_area">
@@ -626,7 +628,7 @@
                         </div>
                         <div class="form-group tt_form_group">
                             <label for="yourMessage"></label>
-                            <textarea class="form-control tt_txtarea" id="yourMessage" placeholder="YOUR MESSAGE" onfocus="placeholder='' " onblur="placeholder='YOUR MESSAGE' "></textarea>
+                            <textarea class="form-control tt_txtarea" id="yourMessage" placeholder="MESSAGE" onfocus="placeholder='' " onblur="placeholder='MESSAGE' "></textarea>
                         </div>
                         <div class="submit_btn_holder center-block text-center">
                             <button type="submit" id="submitContactForm" class="btn submit_btn">Submit</button>
