--- a/services.html
+++ b/services.html
@@ -413,6 +413,9 @@
                                         your theme but in addition have the experience necessary to capture the right image.
                                     </p>
                                 </article>
+                                <div class="inner_getstarted_button_holder text-center center-block">
+                                    <button class="btn inner_genstarted_btn">Get Started</button>
+                                </div>
                             </div> <!-- "Cyber Security" Tab END -->
 
                             <div role="tabpanel" class="tab-pane fade" id="itsupport">
@@ -459,6 +462,9 @@
                                         your business?
                                     </p>
                                 </article>
+                                <div class="inner_getstarted_button_holder text-center center-block">
+                                    <button class="btn inner_genstarted_btn">Get Started</button>
+                                </div>
                             </div> <!-- "IT Support" Tab END -->
 
 
@@ -489,6 +495,9 @@
                                 </article>
                                 <div class="col-sm-12 servcie_image_holder">
                                     <div class="s_image" style="background: url('img/s_image_1.jpg') center center no-repeat; background-size: cover;"></div>
+                                </div>
+                                <div class="inner_getstarted_button_holder text-center center-block">
+                                    <button class="btn inner_genstarted_btn">Get Started</button>
                                 </div>
                             </div> <!-- "Managed Services" Tab END -->
 
@@ -526,6 +535,9 @@
                                         client’s specialized workflow processes.
                                     </p>
                                 </article>
+                                <div class="inner_getstarted_button_holder text-center center-block">
+                                    <button class="btn inner_genstarted_btn">Get Started</button>
+                                </div>
                             </div> <!-- "Network Design" Tab END -->
 
 
@@ -554,7 +566,11 @@
                                         Hosted-PBX is definitely the future but not all providers are the same.
                                     </p>
                                 </article>
+                                <div class="inner_getstarted_button_holder text-center center-block">
+                                    <button class="btn inner_genstarted_btn">Get Started</button>
+                                </div>
                             </div> <!-- "VoIP" Tab END -->
+
                         </div>
                     </div> <!-- Content Panes END -->
                 </div>
@@ -663,7 +679,7 @@
     },false);
     $(window).scroll(function() {
         let newsletterArea = $('#newsletterArea');
-        let hT = $(newsletterArea).offset().top-200,
+        let hT = $(newsletterArea).offset().top-50,
             hH = $(newsletterArea).outerHeight(),
             wH = $(window).height(),
             wS = $(this).scrollTop();
